Reusable build workflow

--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -3,20 +3,15 @@
 
 name: Node.js Package
 
-on:
-  release:
-    types: [created]
+on: [push, pull_request, workflow_call]
 
 jobs:
-  publish-npm:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-          registry-url: https://registry.npmjs.org/
-      - uses: ./.github/workflows/npm-build.yml
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+      - run: npm ci
+      - run: npm test
