--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/build-action
+      - uses: ./.github/workflows/build-action
