--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/build-action
+      - uses: ./.github/workflows/build-action
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
