--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -3,7 +3,7 @@ name: NPM Build
 on: [pull_request, push]
 
 jobs:
-  publish-npm:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
