--- a/.github/workflows/build-action/action.yml
+++ b/.github/workflows/build-action/action.yml
@@ -2,6 +2,9 @@ name: build-action
 runs:
   using: "composite"
   steps:
+    - uses: actions/setup-node@v3
+        with:
+          node-version: 20
     - npm ci
     - npm test
     - npm run build
