--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -1,10 +1,13 @@
 name: NPM Build
 
-on: [pull_request, push]
+on: [ pull_request, push ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
       - uses: ./.github/workflows/build-action
