Reusable build workflow

--- a/.github/workflows/build-action/action.yml
+++ b/.github/workflows/build-action/action.yml
@@ -6,5 +6,8 @@ runs:
       with:
         node-version: 20
     - run: npm ci
+      shell: bash
     - run: npm test
+      shell: bash
     - run: npm run build
+      shell: bash
