Add registry url

--- a/.github/workflows/build-action/action.yml
+++ b/.github/workflows/build-action/action.yml
@@ -5,6 +5,7 @@ runs:
     - uses: actions/setup-node@v3
       with:
         node-version: 20
+        registry-url: "https://registry.npmjs.org"
     - run: npm ci
       shell: bash
     - run: npm test
