--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "ez-vanjs-i18n",
   "version": "0.0.1",
   "description": "A simple i18n library for vanjs",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.js",
   "scripts": {
-    "build": "tsc",
     "test": "echo \"Error: no test specified\""
   },
   "repository": {
@@ -23,8 +21,7 @@
   },
   "homepage": "https://github.com/rcharre-nodulia/ez-vanjs-i18n#readme",
   "devDependencies": {
-    "vanjs-core": "^1.3.0",
-    "typescript": "^5.4.2"
+    "vanjs-core": "^1.3.0"
   },
   "peerDependencies": {
     "vanjs-core": "^1.3.0"
