--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.0.1",
   "description": "A simple i18n library for vanjs",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {}
   },
   "repository": {
     "type": "git",
@@ -21,6 +26,9 @@
   },
   "homepage": "https://github.com/rcharre-nodulia/ez-vanjs-i18n#readme",
   "devDependencies": {
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
     "vanjs-core": "^1.3.0"
   },
   "peerDependencies": {
