--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -1,6 +1,11 @@
 name: NPM Build
 
-on: [ pull_request, push ]
+on:
+  push:
+    branches:
+      - '**'
+      - '!main'
+  pull_request:
 
 jobs:
   build:
