--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "ez-vanjs-i18n",
   "version": "0.0.1",
   "description": "A simple i18n library for vanjs",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\""
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {}
   },
   "repository": {
     "type": "git",
@@ -23,8 +26,9 @@
   },
   "homepage": "https://github.com/rcharre-nodulia/ez-vanjs-i18n#readme",
   "devDependencies": {
-    "vanjs-core": "^1.3.0",
-    "typescript": "^5.4.2"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "vanjs-core": "^1.3.0"
   },
   "peerDependencies": {
     "vanjs-core": "^1.3.0"
