--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ez-vanjs-i18n",
-  "version": "0.0.3-SNAPSHOT",
+  "version": "0.0.3",
   "description": "A simple i18n library for vanjs",
   "main": "src/index.js",
   "type": "module",
